--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.datasource.username=root
 spring.datasource.password=satyajeet
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
+
+
+#mail properties
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=51ac637c4cbf62
+spring.mail.password=56bbd02a0386d1
+spring.mail.protocol=smtp
+
